Revision history for Graphics-Primitive

0.13
  - Reorganize prepare/pack/draw API to be handled by the Driver

0.12
  - Path: Add curve_to and rel_curve_to

0.11
  - Small optimizations
  - Driver: add reset
  - Textbox: Add angle
  - Use Forest rather than Tree::Simple per stevan's request

0.10
  - Path: add rectangle
  - New feature & hint: Add "preserve" to Operation.  Setting this causes
    the canvas to NOT clear the current path on a do().  This operation can
    then be used as a hint to the driver to not create a new path, but to
    reuse the old one.

0.09
  - Path: add arc, close_path, get_path
  - Path: rename get_primitive_at to get_primitive
  - Path: rename count_primitives to primitive_count
  - Path: clone points rather than using them, they tend to change
  - Path: don't inherit or implement anything out of Geo::Primitive, it's
    not necessary
  - Path: add hints attr with for driver hinting and add contiguous flag for
    use with same
  - Gradient: add line attr for guiding Gradient
  - Canvas: update path proxy methods
  - Make everything cloneable, adding Clone trait to 'deep' clone attrs

0.08
  - Path: default starting point to 0,0
  - Rename Graphics::Primitive::Stroke to Graphics::Primitive::Brush
  - Brush: Add Color
  - Add Canvas calls to Driver
  - Add Operation::Fill and Operation::Stroke
  - Lots of POD
  - Add Paint and children

0.07
  - Remove do_prepare
  - Add disclaimer
  - Add lines to Textbox and chop up input, this is likely temporary
  - Add optional layout manager to container
  - prepare now expects the driver to be passed in
  - Component's prepare sets minimum sizes to the outside ones
  - Return default font size from coderef
  - Use isa to check component classes and put container at the bottom
    so that the parent container is drawn before it's children.
  - Add get_tree method to component for visualizing the entire component
  - Prepare children before parents
  - Don't return inside_height or width < 0